--- a/app.json
+++ b/app.json
@@ -1,5 +1,11 @@
 {
 	"pages": [
 		"pages/classic/classic"
-	]
+	],
+	"window": {
+		"navigationBarBackgroundColor": "#fff",
+		"navigationBarTitleText": "空岛",
+		"navigationBarTextStyle": "black",
+		"enablePullDownRefresh": false
+	}
 }
