--- a/app.json
+++ b/app.json
@@ -8,5 +8,5 @@
     "navigationBarTextStyle": "black",
     "enablePullDownRefresh": false
   },
-  "sitemapLocation": "sitemap77.json"
+  "sitemapLocation": "sitemap.json"
 }
