音乐播放组件基本完成

--- a/app.json
+++ b/app.json
@@ -8,5 +8,6 @@
     "navigationBarTextStyle": "black",
     "enablePullDownRefresh": false
   },
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "requiredBackgroundModes": ["audio"]
 }
