--- a/app.json
+++ b/app.json
@@ -1,29 +1,42 @@
 {
-  "pages": [
-    "pages/classic/classic"
-  ],
-  "window": {
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "空岛",
-    "navigationBarTextStyle": "black",
-    "enablePullDownRefresh": false
-  },
-  "sitemapLocation": "sitemap.json",
-  "requiredBackgroundModes": [
-    "audio"
-  ],
-  "tabBar": {
-    "list": [
-      {
-        "pagePath": "pages/classic/classic",
-        "text": "流行",
-        "iconPath": ""
-      },
-      {
-        "pagePath": "pages/classic/classic",
-        "text": "流行",
-        "iconPath": ""
-      }
-    ]
-  }
+	"pages": [
+		"pages/classic/classic",
+		"pages/book/book",
+		"pages/my/my"
+	],
+	"window": {
+		"navigationBarBackgroundColor": "#fff",
+		"navigationBarTitleText": "空岛",
+		"navigationBarTextStyle": "black",
+		"enablePullDownRefresh": false
+	},
+	"sitemapLocation": "sitemap.json",
+	"requiredBackgroundModes": [
+		"audio"
+	],
+	"tabBar": {
+		"selectedColor": "#000000",
+		"backgroundColor": "#ffffff",
+		"color": "#c7c7c7",
+		"list": [
+			{
+				"selectedIconPath": "/images/tab/classic@highlight.png",
+				"pagePath": "pages/classic/classic",
+				"text": "流行",
+				"iconPath": "/images/tab/classic.png"
+			},
+			{
+				"pagePath": "pages/book/book",
+				"selectedIconPath": "/images/tab/book@highlight.png",
+				"iconPath": "/images/tab/book.png",
+				"text": "书籍"
+			},
+			{
+				"pagePath": "pages/my/my",
+				"selectedIconPath": "/images/tab/my@highlight.png",
+				"iconPath": "/images/tab/my.png",
+				"text": "喜欢"
+			}
+		]
+	}
 }
